add group fields, expand doc

--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
         This tool copies annotations from one domain to another. 
         Until we can search whole domains, you'll need to provde a list of URLs 
         that we'll search one by one. 
-        Only top-level annotations will be copied, replies are ignored.  
+        Only top-level annotations will be copied, replies are ignored.
+        The username you provide will be the creator of copied annotations.
+        If the source group is not Public, that user must be a member to 
+        read annotations from it. Likewise, if the destination group is not Public, 
+        that user must be a member to write annotations to it.
       </p>
     </div>
 
