add max annotations field

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div class="formField" id="destinationDomainContainer"></div>
     <div class="formField" id="sourceGroupContainer"></div>
     <div class="formField" id="destinationGroupContainer"></div>
+    <div class="formField" id="limitContainer"></div>
     
     <div><button onclick="copy()">copy</button></div>
 
@@ -61,8 +62,6 @@
   <div id="urlList">
     <textarea rows="40" cols="80" id="urlListContainer">Paste URLs here, one per line</textarea>
   </div>
-
-
 
   <div id="viewer"></div>
 
