implement progress count

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       margin-left: 40px;
       margin-top: 20px;
     }
-    .counter {
+    .progress {
       display: none;
     }
   </style>
@@ -45,7 +45,8 @@
     <div class="formField" id="limitContainer"></div>
     <div class="formField" id="userFilterContainer"></div>
     
-    <div><button onclick="copy()">copy</button> &nbsp;&nbsp; <span class="counter">0</span></div>
+    <div><button onclick="copy()">copy</button></div>
+    <div class="progress"><span class="counter">0</span> of <span class="total">0</span></div>
 
     <div class="help">
       <hr>
