--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <hr>
       <p>
         This tool copies annotations from one domain to another. 
-        Until we can search whole domains, you'll need to provde a list of URLs 
+        Until we can search whole domains, you'll need to provide a list of URLs 
         that we'll search one by one. 
         Only top-level annotations will be copied, replies are ignored.
         The username you provide will be the creator of copied annotations.
