fix typo, add tools link

--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
         Only maxAnnotations will be copied, the default is 2 as a safety check.
         The Hypothesis username you provide will be the creator of copied annotations.
         If the source or destination group is not Public, the Hypothesis user must be a member to 
-        read from the source or write to the destination.
+        read from the source or write to the destination. 
+
+        More <a href="https://jonudell.info/h/tools.html">Hypothesis tools</a>.
       </p>
     </div>
 
